# nukegpt

./: .gitignore  README.md  app.py  pyproject.toml
nukegpt/: settings.py  util.py
prompts/: system_message_level_1.md  system_message_level_2.md  system_message_level_impossible.md  system_message_level_test.md
tests/: test_util.py
